# nambi

./: CMakeLists.txt
include/: log.hpp  posix_bindings.hpp  process.hpp  spawn.hpp
src/: main.cpp  process.cpp  spawn.cpp
